# haikuporter

./: .coveragerc  .gitattributes  .gitignore  AUTHORS.txt  CONTRIBUTING.rst  Dockerfile  ENVIRONMENT.rst  LICENSE  README.md  README.rst  beporter  buildmaster.sh  createrepo.sh  haiku_porter.py  haikuporter  haikuporter-unix  haikuporter.py  haikuporter_bash_completion  haikuports-sample.conf  haikuports.conf  install.sh  installhaikuporter.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  storage-backend-sample.json  tox.ini
.history/: README_20230712003800.md  README_20230712004225.md
HaikuPorter/: BuildMaster.py  BuildPlatform.py  ConfigParser.py  Configuration.py  DependencyAnalyzer.py  DependencyResolver.py  Display.py  GlobalConfig.py  Main.py  Options.py  Package.py  PackageInfo.py  PackageRepository.py  Policy.py  Port.py  ProvidesManager.py  RecipeAttributes.py  RecipeTypes.py  ReleaseChecker.py  ReporterJson.py  ReporterMongo.py  Repository.py  RequiresUpdater.py  ShellScriptlets.py  Source.py  SourceFetcher.py  StorageBackendS3.py  Utils.py  __init__.py  __main__.py  __version__.py  version.py
buildmaster/: .buildmaster.env  .gitignore  .motd  Dockerfile  Makefile  builderctl  buildmaster  buildmaster.sh  checkbuilders  connect_builder.sh  createbuilder  createbuilder.sh  createrepo.sh  gitget
doc/: Makefile  conf.py  haikuporter_bash_completion  index.rst
docs/: index.md  modules.md
generic/: generic-1.2.3.bep  generic_cmd-1.2.3.recipe  generic_cmd_secondary_arch-1.2.3.recipe  generic_font-1.2.3.recipe  generic_lib-1.2.3.recipe  (+8 more)
(+105 files in other folders)
