[build-system]
requires = [ "flit_core >= 3.9.0, <4" ]
build-backend = "flit_core.buildapi"

[project]
name = "HaikuPorter"
authors = [ { name = "Haiku Inc.", email = "contact@haiku-inc.org" } ]
dynamic = [ "version" ]
description = "The tool that builds HaikuPorts recipes."
requires-python = ">=3.10"

[project.optional-dependencies]
test = [ "pytest" ]
doc = [ "sphinx" ]
buildmaster = [ "boto3", "paramiko", "pymongo" ]

[project.scripts]
haikuporter = "HaikuPorter.__main__:main"
